@@ -13,6 +13,7 @@ Legend:
 Pretty URLs 0.8.3                                                 ??
 ================================================================================
  ! Boards/Topics: $_GET['pretty'] needs to be unset with the new SEO changes in SMF 2. (QueryString.php)
+ ! Boards/Topics: Fix $_REQUEST for silly mods that don't check $board/$topic. (Display.php, MessageIndex.php, QueryString.php
 
 Pretty URLs 0.8.2                                                  9 April, 2008
 ================================================================================
